# C60-Si-fall-sim

./: .gitignore  Dockerfile  Pipfile  carbon_dist_parse.py  clusters_parse.py  clusters_parse_angle_dist.py  clusters_parse_sum.py  fedora_lammps.sh  lmp_docker  new_run.py  pyproject.toml  run.py  run_multi.py  sim_algorythm.md  util.py
cluster_bombardment/: angle_analyze.fish  in.fall  rerun_example.fish  rerun_example.sh  run.py  run_example.fish  run_hpc_example.fish
container/: Containerfile  build.sh  distrobox.sh  lammps-20230802.ebuild
crystal_heating/: freezing.in  heating.in  plots.py  run.sh
fullerite/: pyproject.toml  setup.py
graphene/: .gitignore  graphene.in  graphene.py  graphene.sh
info/: creating_big_crystals.md  experiment_plan.md  publications.md  sim_algorithm.md  sim_algorythm.md  tasks.md
input_files/: data.C_60  graphene.data
new_run/: in.clusters  in.computes  in.crater  in.fall  in.fixes  in.groups  in.init  in.potentials  in.regions  in.thermo  in.zero_lvl  rerun_example.sh  run.py  run_batch_example.sh  run_example.fish  run_example.sh  run_py.sh  test_run.sh  test_run_py.sh  test_run_py_2.sh  test_size.sh  vel.py
potentials/: E_ljzbl.txt  LJ_ZBL_CC  LJ_ZBL_SiC  in.lj  in.lj_zbl  in.zbl  lj_zbl.ipynb  zbl.txt
rdf/: calc_rdf.py  graph.py  in.coord  in.rdf  rdf_All.txt  rdf_C.txt  rdf_Si.txt  results.txt  results_count.txt  results_count.txt.bck  run.py  run.sh  tmp.txt
script_3x3/: in.script
script_glue/: glue.py  in.analyze  in.script_glue
scripts/: O_atoms_coords.txt  ke_distr_test.txt  sphere  sphere.go
(+33 files in other folders)
