[project]
name = "fullerite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lammps-mpi4py",
    "numpy>=2.2.4",
    "pydantic>=2.11.0",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "python-lsp-server[all]>=1.12.2",
    "ruff>=0.11.2",
]

[tool.uv.sources]
lammps-mpi4py = { git = "https://github.com/denisstrizhkin/lammps-mpi4py" }
